--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -40,8 +40,8 @@ jobs:
           exit 1
         }
         
-    - name: Upload executable artifact
-      uses: actions/upload-artifact@v3
+    - name: Upload Windows executable
+      uses: actions/upload-artifact@v4
       with:
         name: ExcelCombiner-Windows
         path: dist/ExcelCombiner.exe
